# imgui-cs

./: .gitignore  .gitmodules  ImGui.cs  LICENSE  README.md  bindgen.cmd  bindgen.sh  config.json  header.cs  ignored.txt  imgui-cs.sln  imgui.cs  imgui.props  imgui.sln  library.cmd  library.sh  mingw-w64-x86_64.cmake
.github/scripts/: version.ps1
.github/workflows/: bindgen.yml  build.yml  cimgui.yml  commit.yml  imgui.yml  release.yml
bindgen/: ast_linux.json  ast_osx.json  ast_win.json  config-build-c-library.json  config-extract-linux.json  config-extract-macos.json  config-extract-windows.json  config-generate-cs.json  cs.json
src/c/cimgui/: CMakeLists.txt  cimgui_lib.c  cimgui_lib.h
src/cs/: ImGui.sln
src/cs/production/: Directory.Build.props  Directory.Build.targets
src/cs/production/ImGui/: ImGui.csproj  PInvoke.gen.cs
src/cs/production/Interop.ImGui/: AssemblyAttributes.gen.cs  Interop.ImGui.csproj  PInvoke.gen.cs  _README_PACKAGE.md
src/cs/production/Interop.ImGui.runtime.linux-x64/: Interop.ImGui.runtime.linux-x64.csproj
src/cs/production/Interop.ImGui.runtime.osx/: Interop.ImGui.runtime.osx.csproj
src/cs/production/Interop.ImGui.runtime.win-x64/: Interop.ImGui.runtime.win-x64.csproj
src/cs/production/imgui/: imgui.cs  imgui.csproj
src/cs/production/imgui-cs/: imgui-cs.csproj  imgui.cs
src/cs/samples/: Directory.Build.props  Directory.Build.targets
src/cs/samples/imgui.Samples.SDL/: Program.cs  imgui.Samples.SDL.csproj
